@@ -1,6 +1,7 @@
 package dev.khbd.lens4j.processor;
 
 import com.google.auto.service.AutoService;
+import com.google.common.collect.ImmutableSet;
 import com.squareup.javapoet.JavaFile;
 import dev.khbd.lens4j.core.annotations.GenLenses;
 import dev.khbd.lens4j.core.annotations.Lens;
@@ -57,7 +58,7 @@ public class LensProcessor extends AbstractProcessor {
 
     @Override
     public Set<String> getSupportedAnnotationTypes() {
-        return Set.of(GenLenses.class.getName());
+        return ImmutableSet.of(GenLenses.class.getName());
     }
 
     @Override
