@@ -1,5 +1,6 @@
 package dev.khbd.lens4j.processor.generator;
 
+import com.google.common.collect.ImmutableMap;
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.CodeBlock;
 import dev.khbd.lens4j.core.Lenses;
@@ -30,7 +31,7 @@ class AccessorsLensPartGenerationStrategy implements LensPartGenerationStrategy 
                               ResolvedParametrizedTypeMirror ignore,
                               String name,
                               LensType lensType) {
-        Map<String, Object> params = Map.of(
+        Map<String, Object> params = ImmutableMap.of(
                 "lenses", ClassName.get(Lenses.class),
                 "sourceType", typeNameBuilder.buildTypeName(sourceType),
                 "fieldName", StringUtils.capitalize(name)
