@@ -1,5 +1,6 @@
 package dev.khbd.lens4j.processor.generator;
 
+import com.google.common.collect.ImmutableMap;
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.CodeBlock;
 import dev.khbd.lens4j.core.Lenses;
@@ -28,7 +29,7 @@ class MethodLensPartGenerationStrategy implements LensPartGenerationStrategy {
                               LensType lensType) {
         verifyReadOnly(lensType);
 
-        Map<String, Object> params = Map.of(
+        Map<String, Object> params = ImmutableMap.of(
                 "lenses", ClassName.get(Lenses.class),
                 "sourceType", typeNameBuilder.buildTypeName(sourceType),
                 "methodName", name
