@@ -10,6 +10,8 @@ import org.testng.annotations.Test;
 
 import javax.tools.JavaFileObject;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -21,7 +23,7 @@ public class LensProcessorTest {
     public void generate_methodReturnTypeIsGenericAndGenericsFromClass_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Collections.singletonList(
                                 JavaFileObjects.forResource("cases/method/generic/class_generics/Payment.java")
                         ));
 
@@ -120,7 +122,7 @@ public class LensProcessorTest {
     public void generate_userOverrideLensModifiers_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Arrays.asList(
                                 JavaFileObjects.forResource("cases/lens_modifiers/Account.java"),
                                 JavaFileObjects.forResource("common/Currency.java")
                         ));
@@ -135,7 +137,7 @@ public class LensProcessorTest {
     public void generate_genericHasProjectionAtDeclarationSite_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Arrays.asList(
                                 JavaFileObjects.forResource("cases/generic/projection/From.java"),
                                 JavaFileObjects.forResource("cases/generic/projection/StrFrom.java"),
                                 JavaFileObjects.forResource("cases/generic/projection/AbstractPayment.java"),
@@ -152,7 +154,7 @@ public class LensProcessorTest {
     public void generate_resolvedTypeIsDeclaredWithUnKnownTypeVar_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Arrays.asList(
                                 JavaFileObjects.forResource("cases/generic/type_resolved_to_generic_based_type_with_unknown_type_var/Box.java"),
                                 JavaFileObjects.forResource("cases/generic/type_resolved_to_generic_based_type_with_unknown_type_var/AbstractPayment.java"),
                                 JavaFileObjects.forResource("cases/generic/type_resolved_to_generic_based_type_with_unknown_type_var/BoxedToPayment.java"),
@@ -175,7 +177,7 @@ public class LensProcessorTest {
     public void generate_fieldTypeIsDeclaredWithUnKnownTypeVar_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Arrays.asList(
                                 JavaFileObjects.forResource("cases/generic/field_type_declared_with_unknown_type_param/Box.java"),
                                 JavaFileObjects.forResource("cases/generic/field_type_declared_with_unknown_type_param/AbstractPayment.java"),
                                 JavaFileObjects.forResource("cases/generic/field_type_declared_with_unknown_type_param/Payment.java"),
@@ -192,7 +194,7 @@ public class LensProcessorTest {
     public void generate_fieldTypeIsDeclaredWithKnownTypeVar_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Arrays.asList(
                                 JavaFileObjects.forResource("cases/generic/field_type_declared_with_known_type_param/Box.java"),
                                 JavaFileObjects.forResource("cases/generic/field_type_declared_with_known_type_param/Payment.java"),
                                 JavaFileObjects.forResource("common/Currency.java")
@@ -208,7 +210,7 @@ public class LensProcessorTest {
     public void generate_genericResolvedToGenericBasedType_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Arrays.asList(
                                 JavaFileObjects.forResource("cases/generic/type_resolved_to_generic_based_type/Box.java"),
                                 JavaFileObjects.forResource("cases/generic/type_resolved_to_generic_based_type/BoxedCurrency.java"),
                                 JavaFileObjects.forResource("cases/generic/type_resolved_to_generic_based_type/CurrencyPair.java"),
@@ -226,7 +228,7 @@ public class LensProcessorTest {
     public void generate_childResolveGenericWithSimpleClass_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Arrays.asList(
                                 JavaFileObjects.forResource("cases/generic/first_sub_class_supplied_simple_type/Base.java"),
                                 JavaFileObjects.forResource("cases/generic/first_sub_class_supplied_simple_type/Child.java")
                         ));
@@ -241,7 +243,7 @@ public class LensProcessorTest {
     public void generate_secondChildResolveGenericWithSimpleClass_generateValidFactory() {
         Compilation compilation =
                 javac().withProcessors(new LensProcessor())
-                        .compile(List.of(
+                        .compile(Arrays.asList(
                                 JavaFileObjects.forResource("cases/generic/second_sub_class_supplied_simple_type/Base.java"),
                                 JavaFileObjects.forResource("cases/generic/second_sub_class_supplied_simple_type/FirstChild.java"),
                                 JavaFileObjects.forResource("cases/generic/second_sub_class_supplied_simple_type/SecondChild.java")
@@ -500,9 +502,9 @@ public class LensProcessorTest {
     }
 
     private List<JavaFileObject> withPathObjects(JavaFileObject... objects) {
-        List<JavaFileObject> result = new ArrayList<>(List.of(objects));
+        List<JavaFileObject> result = new ArrayList<>(Arrays.asList(objects));
         result.addAll(
-                List.of(
+                Arrays.asList(
                         JavaFileObjects.forResource("common/Bank.java"),
                         JavaFileObjects.forResource("common/Currency.java"),
                         JavaFileObjects.forResource("common/Payer.java"),
